# data_migration_tool

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirement.txt  setup.py
data_migration_tool/: __init__.py  hooks.py  modules.txt
data_migration_tool/data_migration/: __init__.py  api.py  test_migration.py
data_migration_tool/data_migration/connectors/: __init__.py  csv_connector.py  odoo_connector.py  zoho_connector.py
data_migration_tool/data_migration/mappers/: __init__.py  doctype_creator.py  field_mapper.py
data_migration_tool/data_migration/utils/: concurrency_manager.py  config_validator.py  db_connection_manager.py  db_utils.py  error_handler.py  logger_config.py  memory_manager.py  migration_config.py  path_manager.py  performance_monitor.py  resource_manager.py  scheduler_tasks.py  user_context.py
data_migration_tool/data_migration_tool/doctype/addon/: addon.js  addon.json  addon.py  test_addon.py
data_migration_tool/data_migration_tool/doctype/address/: address.js  address.json  address.py  test_address.py
data_migration_tool/data_migration_tool/doctype/csv_schema_registry/: csv_schema_registry.json  csv_schema_registry.py
data_migration_tool/data_migration_tool/doctype/doctype_creation_request/: doctype_creation_request.js  doctype_creation_request.json  doctype_creation_request.py
data_migration_tool/data_migration_tool/doctype/duplication_policy/: duplication_policy.js  duplication_policy.json  duplication_policy.py
data_migration_tool/data_migration_tool/doctype/import_log/: import_log.json  import_log.py
data_migration_tool/data_migration_tool/doctype/item/: item.js  item.json  item.py  test_item.py
data_migration_tool/data_migration_tool/doctype/migration_data_buffer/: __init__.py  migration_data_buffer.json  migration_data_buffer.py
data_migration_tool/data_migration_tool/doctype/migration_settings/: migration_settings backup.txt  migration_settings.js  migration_settings.json  migration_settings.py  (+1 more)
data_migration_tool/fixtures/: service_category.json  service_type.json  vehicle_type.json
data_migration_tool/public/: build.json
data_migration_tool/public/css/: dashboard.css  data_migration_tool.css
data_migration_tool/public/js/: data_migration_tool.js  doctype_approval_modal.js  doctype_creation_dialog.js  migration_notifications.js
data_migration_tool/templates/: __init__.py
fixtures/: service_category.json  service_type.json  vehicle_type.json
(+19 files in other folders)
