[project]
name = "data_migration_tool"
authors = [
    { name = "Ayush Raj", email = "araj09510@gmail.com"}
]
description = "Comprehensive data migration solution for Frappe/ERPNext - supports CSV, Odoo, Zoho CRM and custom connectors"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
license = { text = "MIT" }
keywords = ["frappe", "erpnext", "data-migration", "etl", "odoo", "zoho"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Framework :: Frappe",
    "Topic :: Database :: Front-Ends",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[project.urls]
Homepage = "https://github.com/ayushhCreator/data_migration_tool"
Repository = "https://github.com/ayushhCreator/data_migration_tool"
Issues = "https://github.com/ayushhCreator/data_migration_tool/issues"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Development dependencies
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# APT dependencies for Frappe Cloud
[tool.frappe-cloud.apt-dependencies]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E", 
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
